# 3d-relationship-graph

./: .gitignore  README.md  build_graph.py  dataset_artigos.csv  dataset_aulas.csv  dataset_cronograma.csv  dataset_relacoes_artigo_aula.csv  extract_aulas.py  extract_dataset.py  gerar_metricas_bons_artigos.py  gerar_pipeline_grafo_detalhada_pil.py  plano de ensino-1.txt  pyproject.toml  rebuild_datasets.py  requirements-acari.txt  requirements.txt
aulas/: cronograma_atividades.csv
data/ementa/: ementa.csv
data/processed/: dataset_artigos.csv  dataset_cronograma.csv  dataset_relacoes_artigo_aula.csv
datasets/: index.json
datasets/_templates/: README.md  artigos.template.csv  aulas.template.csv  ementa.template.csv  manifest.template.json
datasets/medicao/: artigos.csv  aulas.csv  ementa.csv  ementa.txt  graph.json  grupo2_auditoria.csv  grupo2_respostas.csv  grupo2_resumo.json  manifest.json  relacoes.csv
datasets/teste/: artigos.csv  ementa.csv  ementa.txt  graph.json  grupo2_auditoria.csv  grupo2_respostas.csv  grupo2_resumo.json  manifest.json  relacoes.csv
outputs/metricas_bons_artigos/: metricas_bons_artigos.csv  resumo_metricas_bons_artigos.md  secao_para_artigo_e_slides.md
src/medicao/: __init__.py  __main__.py  pipeline.py
src/medicao/shared/: __init__.py  config.py  contract.py  pdf.py  storage.py  text.py
src/medicao/slices/: __init__.py
src/medicao/slices/acari/: __init__.py  pipeline.py
src/medicao/slices/artigos/: __init__.py  detectors.py  extraction.py  schema.py  (+1 more)
visualizacao/: Artigos  aulas  data.json  graph_data.json  index.html
(+36 files in other folders)
