[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "medicao-software"
version = "1.0.0"
description = "Extração e visualização de artigos, aulas e cronograma da disciplina de Medição e Experimentação em Engenharia de Software."
requires-python = ">=3.9"
dependencies = ["PyMuPDF>=1.26"]

[project.scripts]
medicao = "medicao.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
